tests/negative/regression/r27.orng
fn main() -> Int {
    impl for Int { }
}
